--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -572,6 +572,7 @@ jobs:
               --service-name "recommendations" \
               --provider-name "bookverse-recommendations-github" \
               --jfrog-url "${{ vars.JFROG_URL }}" \
+              --docker-registry "${{ vars.DOCKER_REGISTRY }}" \
               --verbose
             echo "✅ OIDC token exchange completed using shared script"
           else
