fix: ensure JFROG_URL available for evidence library
ENVIRONMENT FIX: Add missing JF_URL environment variable
✅ Added JF_URL to create-promote job environment variables
✅ Evidence library can now access platform URL via JF_URL or JFROG_URL
✅ Resolves missing platform-url parameter for evidence commands

ISSUE RESOLVED:
- Evidence library requires JFROG_URL/JF_URL for --platform-url parameter
- create-promote job now exports both JFROG_URL and JF_URL
- JFrog CLI evidence commands should now execute successfully

This completes the fix for evidence attachment failures.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -535,6 +535,7 @@ jobs:
       # Common promotion environment variables
       EVIDENCE_PRIVATE_KEY: ${{ secrets.EVIDENCE_PRIVATE_KEY }}
       JFROG_URL: ${{ vars.JFROG_URL }}
+      JF_URL: ${{ vars.JFROG_URL }}
       PROJECT_KEY: ${{ vars.PROJECT_KEY }}
       STAGES_STR: "DEV QA STAGING PROD"
       FINAL_STAGE: "PROD"
