ADD: Concurrency control to prevent CI race conditions
🎯 RACE CONDITION PREVENTION:
- Added concurrency group: ci-${{ vars.PROJECT_KEY }}-${{ github.repository }}
- Set cancel-in-progress: true

🔧 HOW IT WORKS:
- Groups workflows by project and repository
- Automatically cancels running workflows when new one starts
- Prevents multiple workflows from modifying the same objects simultaneously

📋 BENEFITS:
✅ Prevents JFrog AppTrust version conflicts
✅ Eliminates evidence collection race conditions
✅ Protects release bundle operations from concurrent modification
✅ Ensures only one CI modifies bookverse-recommendations at a time

🧪 BEHAVIOR:
- If workflow is running and new one starts → cancels old, runs new
- Perfect for development where latest changes take priority
- Zero maintenance - native GitHub Actions feature

This addresses the 2-minute window concern by immediately preventing
concurrent executions rather than time-based checking.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,11 @@ name: CI
 
 # DEMO-READY: Automatic triggers enabled for full CI/CD pipeline demonstration
 # PRODUCTION NOTE: Real systems would have additional branch protection and approval gates
+
+# Concurrency control to prevent race conditions when modifying the same objects
+concurrency:
+  group: ci-${{ vars.PROJECT_KEY }}-${{ github.repository }}
+  cancel-in-progress: true
 on:
   push:
     branches: [main]
