REVERT: CLI version back to latest for release bundle debug test
🔄 CHANGE: version: 2.78.9 → version: latest

📋 NEXT STEP: Implementing comprehensive release bundle debug test:
- Create temporary release bundle from same build info
- Test evidence attachment to temporary RB
- Compare with evidence attachment to original application RB
- This will isolate if issue is with our specific RB or general evidence commands

🎯 THEORY: Applications and release bundles share same infra
- If we can create our own RB and attach evidence → proves evidence works
- If our RB works but application RB fails → issue with specific application RB
- If both fail → general evidence command authentication issue

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,7 +118,7 @@ jobs:
       - name: "[Setup] JFrog CLI"
         uses: EyalDelarea/setup-jfrog-cli@swampUpAppTrust
         with:
-          version: 2.78.9
+          version: latest
           oidc-provider-name: bookverse-recommendations-github
           oidc-audience: ${{ vars.JFROG_URL }}
           disable-job-summary: true
@@ -613,7 +613,7 @@ jobs:
       - name: "[Setup] JFrog CLI"
         uses: EyalDelarea/setup-jfrog-cli@swampUpAppTrust
         with:
-          version: 2.78.9
+          version: latest
         env:
           JFROG_CLI_BUILD_NAME: ${{ needs.build-test-publish.outputs.build_name }}
           JFROG_CLI_BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
