UPDATE: Debug step name for release bundle test approach
🔄 CHANGE: Debug step name updated to reflect new strategy
- '[DEBUG] AppTrust CLI Permissions Test' → '[DEBUG] Release Bundle Creation and Evidence Test'

📋 NEXT IMPLEMENTATION: Release Bundle Creation Debug Test
🎯 STRATEGY:
1. Create temporary release bundle from same build info
2. Test evidence attachment to temporary RB
3. Test evidence attachment to original application RB
4. Compare results to isolate the root cause

📊 DIAGNOSTIC APPROACH:
- Test RB works + Original RB fails → Issue with application RB
- Both fail → General evidence command issue
- Test RB creation fails → Build info/permissions issue

This will definitively isolate whether the 401 errors are specific to our
application release bundle or a general evidence command problem.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -768,7 +768,7 @@ jobs:
           echo "✅ Application version evidence attached: slsa-provenance, jira-release"
 
 
-      - name: "[DEBUG] AppTrust CLI Permissions Test"
+      - name: "[DEBUG] Release Bundle Creation and Evidence Test"
         env:
           EVIDENCE_PRIVATE_KEY: ${{ secrets.EVIDENCE_PRIVATE_KEY }}
         run: |
