Fix YAML syntax: Replace heredoc with echo to prevent YAML parser conflicts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -436,37 +436,33 @@ jobs:
           echo "📊 Creating pytest evidence with direct JFrog CLI..."
           
           # Create pytest evidence predicate
-          cat > pytest-results.json << 'EOF'
-{
-  "@type": "https://pytest.org/evidence/results/v1",
-  "predicateType": "https://pytest.org/evidence/results/v1",
-  "subject": [{"name": "$PACKAGE_NAME", "digest": {"sha256": "$PACKAGE_VERSION"}}],
-  "predicate": {
-    "test_framework": "pytest",
-    "total_tests": 25,
-    "passed_tests": 24,
-    "failed_tests": 1,
-    "coverage_percent": 85.5,
-    "test_duration_seconds": 45
-  }
-}
-EOF
+          echo '{
+            "@type": "https://pytest.org/evidence/results/v1",
+            "predicateType": "https://pytest.org/evidence/results/v1",
+            "subject": [{"name": "'"$PACKAGE_NAME"'", "digest": {"sha256": "'"$PACKAGE_VERSION"'"}}],
+            "predicate": {
+              "test_framework": "pytest",
+              "total_tests": 25,
+              "passed_tests": 24,
+              "failed_tests": 1,
+              "coverage_percent": 85.5,
+              "test_duration_seconds": 45
+            }
+          }' > pytest-results.json
           
           # Create SAST evidence predicate  
-          cat > sast-scan.json << 'EOF'
-{
-  "@type": "https://checkmarx.com/evidence/sast/v1.1",
-  "predicateType": "https://checkmarx.com/evidence/sast/v1.1", 
-  "subject": [{"name": "$PACKAGE_NAME", "digest": {"sha256": "$PACKAGE_VERSION"}}],
-  "predicate": {
-    "scan_type": "SAST",
-    "total_vulnerabilities": 3,
-    "high_findings": 0,
-    "medium_findings": 1,
-    "low_findings": 2
-  }
-}
-EOF
+          echo '{
+            "@type": "https://checkmarx.com/evidence/sast/v1.1",
+            "predicateType": "https://checkmarx.com/evidence/sast/v1.1", 
+            "subject": [{"name": "'"$PACKAGE_NAME"'", "digest": {"sha256": "'"$PACKAGE_VERSION"'"}}],
+            "predicate": {
+              "scan_type": "SAST",
+              "total_vulnerabilities": 3,
+              "high_findings": 0,
+              "medium_findings": 1,
+              "low_findings": 2
+            }
+          }' > sast-scan.json
 
           # Create evidence using direct JFrog CLI (proven working pattern)
           echo "✅ Creating pytest evidence with direct GitHub variable syntax..."
@@ -519,19 +515,17 @@ EOF
           echo ""
           
           echo "🧪 Creating manual debug evidence with all variables printed:"
-          cat > debug-manual.json << 'EOF'
-{
-  "@type": "https://debug.manual/test/v1",
-  "predicateType": "https://debug.manual/test/v1",
-  "subject": [{"name": "debug-manual-test", "digest": {"sha256": "debug-123"}}],
-  "predicate": {
-    "debug_type": "manual_evidence_test",
-    "timestamp": "$(date -u +%Y-%m-%dT%H:%M:%SZ)",
-    "key_alias": "${{ vars.EVIDENCE_KEY_ALIAS }}",
-    "project": "${{ vars.PROJECT_KEY }}"
-  }
-}
-EOF
+          echo '{
+            "@type": "https://debug.manual/test/v1",
+            "predicateType": "https://debug.manual/test/v1",
+            "subject": [{"name": "debug-manual-test", "digest": {"sha256": "debug-123"}}],
+            "predicate": {
+              "debug_type": "manual_evidence_test",
+              "timestamp": "'"$(date -u +%Y-%m-%dT%H:%M:%SZ)"'",
+              "key_alias": "${{ vars.EVIDENCE_KEY_ALIAS }}",
+              "project": "${{ vars.PROJECT_KEY }}"
+            }
+          }' > debug-manual.json
           
           echo "📄 Debug evidence content:"
           cat debug-manual.json
@@ -596,19 +590,17 @@ EOF
           export PACKAGE_VERSION="$CONFIG_VERSION"
           
           # Create config bundle evidence predicate
-          cat > config-bundle.json << 'EOF'
-{
-  "@type": "https://in-toto.io/Statement/v0.1",
-  "predicateType": "https://in-toto.io/Statement/v0.1",
-  "subject": [{"name": "$PACKAGE_NAME", "digest": {"sha256": "$PACKAGE_VERSION"}}],
-  "predicate": {
-    "bundle_type": "configuration",
-    "file_count": 8,
-    "validation_status": "passed",
-    "checksum_verified": true
-  }
-}
-EOF
+          echo '{
+            "@type": "https://in-toto.io/Statement/v0.1",
+            "predicateType": "https://in-toto.io/Statement/v0.1",
+            "subject": [{"name": "'"$PACKAGE_NAME"'", "digest": {"sha256": "'"$PACKAGE_VERSION"'"}}],
+            "predicate": {
+              "bundle_type": "configuration",
+              "file_count": 8,
+              "validation_status": "passed",
+              "checksum_verified": true
+            }
+          }' > config-bundle.json
 
           # Create evidence using direct JFrog CLI
           echo "✅ Creating config evidence with direct GitHub variable syntax..."
